# ieee_journal_downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
misc/: relevant_requests.txt  requests_tracking_data.txt  sample_metadata_api_data.json  sample_toc_api_data.json
src/: main.rs  pdf_helper.rs  utils.rs
